2005-11-02  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(getForeground): Return null as default color, instead of some
	system color.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/BoxLayout.java
	(BoxLayout): Throw AWTError when the axis is invalid.
	(minimumLayoutSize): Respect the insets of the container.
	(maximumLayoutSize): Likewise.
	(invalidateLayout): Throw AWTError if the managed container is
	not the same as the parent parameter.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(getMaximumSize): Return (Short.MAX_VALUE, Short.MAX_VALUE) instead
	of (Integer.MAX_VALUE, Integer.MAX_VALUE) as shown by the
	Mauve test.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTable.java
	(AccessibleJTable.AccessibleJTableCell): New inner class.

2005-11-02  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/filechooser/FileSystemView.java: Added API docs all over,
	* javax/swing/filechooser/UnixFileSystemView.java: Likewise.

2005-11-02  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* java/lang/String.java (String): Added 
	StringIndexOutOfBoundsException check (overflow) and a message 
	to the exceptions.
			
2005-11-02  David Gilbert  <david.gilbert@object-refinery.com>

	* NEWS: added entries for javax.swing.plaf.metal.* package and updates
	to the gnu.classpath.examples.swing.Demo application,
	* AUTHORS:  added my name to bring honour and glory to myself and all 
	my descendants.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(AccessibleJComponent.changeSupport): New field.
	(AccessibleJComponent.AccessibleJComponent): Initialize changeSupport.
	(AccessibleJComponent.addPropertyChangeListener): Implemented this
	method.
	(AccessibleJComponent.removePropertyChangeListener): Implemented this
	method.
	(AccessibleJComponent.getAccessibleChildrenCount): Implemented this
	method.
	(AccessibleJComponent.getAccessibleChild): Implemented this