@@ -397,8 +397,7 @@ public abstract class BasicLookAndFeel extends LookAndFeel
       "DesktopIcon.border", new BorderUIResource.CompoundBorderUIResource(null,
                                                                           null),
       "EditorPane.background", new ColorUIResource(Color.white),
-      "EditorPane.border",
-      new BorderUIResource(BasicBorders.getMarginBorder()),
+      "EditorPane.border", BasicBorders.getMarginBorder(),
       "EditorPane.caretBlinkRate", new Integer(500),
       "EditorPane.caretForeground", new ColorUIResource(Color.black),
       "EditorPane.font", new FontUIResource("Serif", Font.PLAIN, 12),
@@ -985,7 +984,7 @@ public abstract class BasicLookAndFeel extends LookAndFeel
       new BorderUIResource(BasicBorders.getMarginBorder()),
       "TextArea.caretBlinkRate", new Integer(500),
       "TextArea.caretForeground", new ColorUIResource(Color.black),
-      "TextArea.font", new FontUIResource("Monospaced", Font.PLAIN, 12),
+      "TextArea.font", new FontUIResource("MonoSpaced", Font.PLAIN, 12),
       "TextArea.foreground", new ColorUIResource(Color.black),
       "TextArea.inactiveForeground", new ColorUIResource(Color.gray),
       "TextArea.keyBindings", new JTextComponent.KeyBinding[] {
@@ -1032,8 +1031,7 @@ public abstract class BasicLookAndFeel extends LookAndFeel
       "TextField.selectionBackground", new ColorUIResource(Color.black),
       "TextField.selectionForeground", new ColorUIResource(Color.white),
       "TextPane.background", new ColorUIResource(Color.white),
-      "TextPane.border",
-      new BorderUIResource(BasicBorders.getMarginBorder()),
+      "TextPane.border", BasicBorders.getMarginBorder(),
       "TextPane.caretBlinkRate", new Integer(500),
       "TextPane.caretForeground", new ColorUIResource(Color.black),
       "TextPane.font", new FontUIResource("Serif", Font.PLAIN, 12),
